syntax = "proto3";

option csharp_namespace = "ProjectWarrantlyRecordGrpcServer.Protos";

import "google/api/annotations.proto";

package RepairPartManagement;

service RepairPartManagement{
	//Readlist
	rpc ListRepairPartManagement(GetListRepairPartRequest) returns (GetListRepairPartResponse){
		option (google.api.http) = {
			get: "/api/RepairPartManagement/ListRepairPartManagement"
		};
	}
}

message GetListRepairPartRequest{
	
}

message GetRepairPartResponse{
	int32 IdRepairPart = 1;
	string RepairPartName = 2;
	int32 Price = 3;
}

message GetListRepairPartResponse{
	repeated GetRepairPartResponse toListRepairPast = 1;
}
